--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -4,7 +4,10 @@
     display: inline-block;
     background-color: transparent;
     border: 1px solid transparent;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .btn-primary {
