--- a/styles/basic/_variables.scss
+++ b/styles/basic/_variables.scss
@@ -7,8 +7,11 @@ $basic-green2: #106324;
 $basic-black: #4d4d4d;
 $basic-white: #ffffff;
 
+$basic-grey: #888888;
+$basic-grey2: #f2f2f2;
+
 /// Backgrounds
-$basic-background: #faf7ea;
+$basic-background: #a8a8a8;
 
 
 // Another
