--- a/styles/components/_forms.scss
+++ b/styles/components/_forms.scss
@@ -47,7 +47,71 @@ textarea {
         border: 1px solid b.$basic-green;
     }
 }
+label {
+    &:has(input[type="file"]:disabled) {
+        display: none;
+    }
+}
+input[type="file"]{
+    color: b.$basic-green;
 
+    &:disabled {
+        display: none;
+    }
+}
+/*.custom-file-upload {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    height: 2.5rem;
+    margin-bottom: 0.5rem;
+
+    input {
+        min-width: 14rem;
+    filter: alpha(opacity = 0);
+    opacity: 0;
+    }
+
+    .file-upload-text {
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 5;
+        height: 2.5rem;
+        padding: .5rem 1rem;
+        
+        line-height: 1.5;
+        color: #555;
+        background-color: #fff;
+        border: .075rem solid #ddd;
+        border-radius: .25rem;
+        box-shadow: inset 0 .2rem .4rem rgba(0,0,0,.05);
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        &::before {
+            position: absolute;
+            top: -.075rem;
+            right: -.075rem;
+            bottom: -.075rem;
+            z-index: 6;
+            display: block;
+            content: "Najít";
+            height: 2.5rem;
+            padding: .5rem 1rem;
+            line-height: 1.5;
+            color: #555;
+            background-color: #eee;
+            border: .075rem solid #ddd;
+            border-radius: 0 .25rem .25rem 0;
+        }
+        &::after {
+            content: "Vyfotit...";
+        }
+    }
+}*/
 .form-field {
     position: relative;
     margin-bottom: 2rem;
