--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -2,22 +2,31 @@
 
 .btn {
     display: inline-block;
+    padding: 0.5rem 2rem;
     background-color: transparent;
     border: 1px solid transparent;
     border-radius: 1rem;
     font-size: 1.2rem;
     text-align: center;
+    font-weight: 700;
     text-transform: uppercase;
+    transition: b.$transition;
 }
 
 .btn-primary {
     background-color: b.$basic-green;
     color: b.$basic-white;
-    font-weight: 700;
-    transition: b.$transition;
-    padding: 0.5rem 2rem;
 
     &:hover {
         background-color: b.$basic-green2;
+    }
+}
+
+.btn-secondary {
+    background-color: #a8a8a8;
+    color: b.$basic-black;
+    &:hover {
+        background-color: b.$basic-grey2;
+        color: b.$basic-grey;
     }
 }
