--- a/styles/components/_forms.scss
+++ b/styles/components/_forms.scss
@@ -1,12 +1,13 @@
 @use '../basic/index' as b;
 
 input {
+
     &[type="text"],
     &[type="email"],
-    &[type="password"], 
+    &[type="password"],
     &[type="number"],
-    &[type="tel"], 
-    &[type="date"]{
+    &[type="tel"],
+    &[type="date"] {
         width: 100%;
         //margin-bottom: 1rem;
         padding: 0.5rem 1rem;
@@ -47,12 +48,14 @@ textarea {
         border: 1px solid b.$basic-green;
     }
 }
+
 label {
     &:has(input[type="file"]:disabled) {
         display: none;
     }
 }
-input[type="file"]{
+
+input[type="file"] {
     color: b.$basic-green;
 
     &:disabled {
@@ -83,6 +86,11 @@ input[type="file"]{
         &:first-of-type {
             margin-top: 0.5rem;
         }
+
+        &:has(input[type="file"]:disabled) {
+            padding-bottom: 0;
+        }
+
         input[type=file]::file-selector-button {
             margin-right: 20px;
             border: none;
@@ -92,11 +100,11 @@ input[type="file"]{
             color: #fff;
             cursor: pointer;
             transition: background .2s ease-in-out;
-          }
-          
-          input[type=file]::file-selector-button:hover {
+        }
+
+        input[type=file]::file-selector-button:hover {
             background: b.$basic-green2;
-          }
+        }
     }
 
     label {
@@ -112,7 +120,7 @@ input[type="file"]{
             color: b.$basic-green;
             font-weight: 700;
             margin-left: 0.25rem;
-        }        
+        }
     }
 }
 
@@ -131,7 +139,7 @@ input[type="file"]{
         border-radius: 1rem 0 0 1rem;
         font-size: 1.2rem;
 
-        + input {
+        +input {
             border-radius: 0 1rem 1rem 0;
         }
     }
