Enhance file upload functionality: add temporary file handling, update Google Drive API integration, and improve error responses

--- a/styles/components/_forms.scss
+++ b/styles/components/_forms.scss
@@ -106,6 +106,13 @@ input[type="file"] {
             background: b.$basic-green2;
         }
     }
+    .detail-info {
+        .form-field__input {
+            &:first-of-type {
+                margin-top: 0;
+            }
+        }       
+    }
 
     label {
         margin-bottom: 1rem;
