Enhance signature module: add button wrapper, adjust image styling, and improve popup dimensions

--- a/styles/components/_sign-modul.scss
+++ b/styles/components/_sign-modul.scss
@@ -16,5 +16,12 @@
 
     .popup-content {
         background-color: b.$basic-white;
+        max-width: 390px;
+        max-height: 200px;
+
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
