--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -5,7 +5,7 @@
     padding: 0.5rem 2rem;
     background-color: transparent;
     border: 1px solid transparent;
-    border-radius: 2rem;
+    border-radius: 1rem;
     font-size: 1.2rem;
     text-align: center;
     font-weight: 700;
@@ -28,5 +28,14 @@
     &:hover {
         background-color: b.$basic-grey2;
         color: b.$basic-grey;
+    }
+}
+
+.btn-logout {
+    background-color: #b91c1c;
+    color: b.$basic-white;
+    font-size: 1rem;
+    &:hover {
+        background-color: #7f1d1d;
     }
 }
