Refactor form handling: implement draft saving, enhance input handling, and improve layout styles

--- a/styles/components/_forms.scss
+++ b/styles/components/_forms.scss
@@ -40,6 +40,9 @@ textarea {
     font-size: 1.2rem !important;
     padding: 0.3rem 1rem !important;
     transition: b.$transition;
+    &.select {
+        padding: 0.1rem 1rem !important;
+    }
 
     &:focus,
     &:focus-visible,
