--- a/styles/components/_forms.scss
+++ b/styles/components/_forms.scss
@@ -1,16 +1,15 @@
 @use '../basic/index' as b;
 
 input {
-
-    &[type="text"],
-    &[type="email"],
-    &[type="password"],
-    &[type="number"],
-    &[type="tel"],
-    &[type="date"] {
+    &[type='text'],
+    &[type='email'],
+    &[type='password'],
+    &[type='number'],
+    &[type='tel'],
+    &[type='date'] {
         width: 100%;
         //margin-bottom: 1rem;
-        padding: 0.25rem 1rem;
+        padding: 0.25rem 0.5rem;
         transition: b.$transition;
         border: 1px solid b.$basic-grey;
         //border-radius: 1rem;
@@ -38,7 +37,7 @@ textarea {
     border: 1px solid b.$basic-grey;
     border-radius: 0.25rem;
     font-size: 1.2rem !important;
-    padding: 0.3rem 1rem !important;
+    padding: 0.1rem 0.5rem !important;
     transition: b.$transition;
 
     &:focus,
@@ -50,12 +49,12 @@ textarea {
 }
 
 label {
-    &:has(input[type="file"]:disabled) {
+    &:has(input[type='file']:disabled) {
         display: none;
     }
 }
 
-input[type="file"] {
+input[type='file'] {
     color: b.$basic-green;
 
     &:disabled {
@@ -87,11 +86,11 @@ input[type="file"] {
             margin-top: 0.5rem;
         }
 
-        &:has(input[type="file"]:disabled) {
+        &:has(input[type='file']:disabled) {
             padding-bottom: 0;
         }
 
-        input[type=file]::file-selector-button {
+        input[type='file']::file-selector-button {
             margin-right: 20px;
             border: none;
             background: b.$basic-green;
@@ -99,10 +98,10 @@ input[type="file"] {
             border-radius: 2rem;
             color: #fff;
             cursor: pointer;
-            transition: background .2s ease-in-out;
+            transition: background 0.2s ease-in-out;
         }
 
-        input[type=file]::file-selector-button:hover {
+        input[type='file']::file-selector-button:hover {
             background: b.$basic-green2;
         }
     }
@@ -116,12 +115,7 @@ input[type="file"] {
     }
 
     label {
-        margin-bottom: 1rem;
         position: relative;
-
-        &:last-of-type {
-            margin-bottom: 0;
-        }
 
         .required {
             display: inline-block;
@@ -146,9 +140,8 @@ input[type="file"] {
         border-right: 0;
         border-radius: 1rem 0 0 1rem;
         font-size: 1.2rem;
-        
 
-        +input {
+        + input {
             border-radius: 0 1rem 1rem 0;
         }
     }
@@ -161,7 +154,7 @@ input[type="file"] {
 
         input {
             border-radius: 1rem 0 0 1rem;
-        }       
+        }
     }
 }
 
@@ -172,29 +165,28 @@ input[type="file"] {
     height: 57px;
     margin-bottom: 0 !important;
 
-    &::before{
+    &::before {
         content: 'NE';
         left: 10px;
     }
-    &::after{
+    &::after {
         content: 'ANO';
         right: 0%;
     }
-    &::before, 
+    &::before,
     &::after {
         position: absolute;
         transform: translate(-50%, -50%);
-        top: 75%;        
+        top: 75%;
         font-size: 1.2rem;
         color: b.$basic-black;
-
     }
     input {
         opacity: 0;
         width: 0;
         height: 0;
 
-        &:checked+.slider {
+        &:checked + .slider {
             background-color: b.$basic-green;
 
             &:before {
@@ -204,8 +196,8 @@ input[type="file"] {
             }
         }
 
-        &:focus+.slider {
-            box-shadow: 0 0 1px #2196F3;
+        &:focus + .slider {
+            box-shadow: 0 0 1px #2196f3;
         }
     }
 
@@ -217,19 +209,19 @@ input[type="file"] {
         right: 59px;
         bottom: 0;
         background-color: b.$basic-grey;
-        -webkit-transition: .4s;
-        transition: .4s;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
 
         &::before {
             position: absolute;
-            content: "";
+            content: '';
             height: 20px;
             width: 20px;
             left: 4px;
             bottom: 4px;
             background-color: white;
-            -webkit-transition: .4s;
-            transition: .4s;
+            -webkit-transition: 0.4s;
+            transition: 0.4s;
         }
 
         &.round {
